Bug 15017 - kexec regression, radeon/kms irq related (bisected)
Summary: kexec regression, radeon/kms irq related (bisected)
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Video(DRI - non Intel) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_video-dri
URL:
Keywords:
Depends on:
Blocks: 14885
  Show dependency tree
 
Reported: 2010-01-09 18:49 UTC by Markus Trippelsdorf
Modified: 2010-01-26 12:16 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6.33-rc3
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
Disable irq at suspend (4.68 KB, patch)
2010-01-15 13:50 UTC, Jérôme Glisse
Details | Diff
Don't process irq until initialized (1.49 KB, patch)
2010-01-15 13:50 UTC, Jérôme Glisse
Details | Diff
Handle IH ring overflow (1.41 KB, patch)
2010-01-15 13:51 UTC, Jérôme Glisse
Details | Diff

Description Markus Trippelsdorf 2010-01-09 18:49:50 UTC
Commit d8f60cfc93452d0554f6a701aa8e3236cbee4636 (drm/radeon/kms: Add support for interrupts on r6xx/r7xx chips) breaks kexec on my machine (amd64, RS780).
The computer just hangs right after the kexec call and I have to press the reset button to get it running again.
2.6.32 worked flawlessly.
Comment 1 Rafael J. Wysocki 2010-01-13 22:10:44 UTC
First-Bad-Commit : d8f60cfc93452d0554f6a701aa8e3236cbee4636
Comment 2 Rafael J. Wysocki 2010-01-13 22:11:26 UTC
commit d8f60cfc93452d0554f6a701aa8e3236cbee4636
Author: Alex Deucher <alexdeucher@gmail.com>
Date:   Tue Dec 1 13:43:46 2009 -0500

    drm/radeon/kms: Add support for interrupts on r6xx/r7xx chips (v3)

    Signed-off-by: Alex Deucher <alexdeucher@gmail.com>
    Signed-off-by: Dave Airlie <airlied@redhat.com>
Comment 3 Jérôme Glisse 2010-01-15 13:50:02 UTC
Created attachment 24571 [details]
Disable irq at suspend
Comment 4 Jérôme Glisse 2010-01-15 13:50:37 UTC
Created attachment 24572 [details]
Don't process irq until initialized
Comment 5 Jérôme Glisse 2010-01-15 13:51:27 UTC
Created attachment 24573 [details]
Handle IH ring overflow

Please can you test if the attached patch set helps with your issue. Thanks
Comment 6 Markus Trippelsdorf 2010-01-15 14:30:11 UTC
Yes, kexec works again with your patches applied.
Thanks a lot Jérôme.

Note You need to log in before you can comment on or make changes to this bug.