bring RHEL6 radeon drm up to 2.6.33-rc4/5 level

Patchwork-id: 22695
O-Subject: [RHEL6 PATCH] [drm] bring RHEL6 radeon drm up to 2.6.33-rc4/5 level
Bugzilla: 557539
RH-Acked-by: Dave Airlie <airlied@redhat.com>

https://bugzilla.redhat.com/show_bug.cgi?id=557539

Description
This patch bring drm/radeon to the lastest fixes we have scheduled
for 2.6.33. I list each of the subpatch this patch contains along
with the commit id from
http://git.kernel.org/?p=linux/kernel/git/airlied/drm-2.6.git;a=shortlog;h=refs/heads/drm-radeon-testing

Upstream status
Patch are in testing before being send to Linus for 2.6.33
inclusion, patches here already had enought testing or we
are confident that they fixe issue to be worth integrating
in RHEL6) Along with a the one line description i give a link
to bug each patch fixes (when there is such bug associated)

Notes:
db96380ea26fcc31ab37189aedeabd12894b1431
drm/radeon/kms: r600/r700 don't test ib if ib initialization fails
http://git.kernel.org/?p=linux/kernel/git/airlied/drm-2.6.git;a=commit;h=db96380ea26fcc31ab37189aedeabd12894b1431

7e71c9e2e7704ebf044d4a964e02fbd2098a173f
drm/radeon/kms: Forbid creation of framebuffer with no valid GEM object
http://git.kernel.org/?p=linux/kernel/git/airlied/drm-2.6.git;a=commit;h=7e71c9e2e7704ebf044d4a964e02fbd2098a173f

7924e5eb8fe422d6b1ce3b3e2be749a480dfcdd9
drm/radeon/kms: r600 handle irq vector ring overflow
http://git.kernel.org/?p=linux/kernel/git/airlied/drm-2.6.git;a=commit;h=7924e5eb8fe422d6b1ce3b3e2be749a480dfcdd9

79c2bbc505751bb5130ac753251fc9a0eb37bb12
drm/radeon/kms: r600/r700 don't process IRQ if not initialized
http://bugzilla.kernel.org/show_bug.cgi?id=15017
http://git.kernel.org/?p=linux/kernel/git/airlied/drm-2.6.git;a=commit;h=79c2bbc505751bb5130ac753251fc9a0eb37bb12

0c45249f419d8b86abe0e51c6627ca4b085e8c23
drm/radeon/kms: r600/r700 disable irq at suspend
http://git.kernel.org/?p=linux/kernel/git/airlied/drm-2.6.git;a=commit;h=0c45249f419d8b86abe0e51c6627ca4b085e8c23

615e0cb67968c94fd9e53797985843a5b816dec4
drm/radeon/kms/r4xx: cleanup atom path
http://git.kernel.org/?p=linux/kernel/git/airlied/drm-2.6.git;a=commit;h=615e0cb67968c94fd9e53797985843a5b816dec4

54f088a9603dbee88809cb2ddfd8dc1ef8a74be5
drm/radeon/kms: fix atombios_crtc_set_base
http://git.kernel.org/?p=linux/kernel/git/airlied/drm-2.6.git;a=commit;h=54f088a9603dbee88809cb2ddfd8dc1ef8a74be5

e2f8e87089427d3a203538dc73058b90e82b11f6
drm/radeon/kms/atom: upstream parser updates
http://git.kernel.org/?p=linux/kernel/git/airlied/drm-2.6.git;a=commit;h=e2f8e87089427d3a203538dc73058b90e82b11f6

9f53e7931610cbd1715fd2d2c0f9a853e17f02d8
drm/radeon/kms/atom: fix some parser bugs
http://git.kernel.org/?p=linux/kernel/git/airlied/drm-2.6.git;a=commit;h=9f53e7931610cbd1715fd2d2c0f9a853e17f02d8

07bec2df01cde5590a1700b992d12de3f46b12bc
drm/radeon/kms: fix hardcoded mmio size in register functions
http://git.kernel.org/?p=linux/kernel/git/airlied/drm-2.6.git;a=commit;h=07bec2df01cde5590a1700b992d12de3f46b12bc

cf57fc7aa2ac61d02a29550b99db6a01ccd7917c
drm/radeon/kms/r100: fix bug in CS parser
http://git.kernel.org/?p=linux/kernel/git/airlied/drm-2.6.git;a=commit;h=cf57fc7aa2ac61d02a29550b99db6a01ccd7917c

828153e29206196552c2cc34461ad7e5b93e3f22
drm/radeon/kms/r200: fix bug in CS parser
http://bugs.freedesktop.org/show_bug.cgi?id=26061
http://git.kernel.org/?p=linux/kernel/git/airlied/drm-2.6.git;a=commit;h=828153e29206196552c2cc34461ad7e5b93e3f22

f3d1ccc14f37a07614c67a270f05a8d94ec3667c
drm/radeon/kms/r200: fix bug in CS parser
http://bugs.freedesktop.org/show_bug.cgi?id=24159
http://git.kernel.org/?p=linux/kernel/git/airlied/drm-2.6.git;a=commit;h=f3d1ccc14f37a07614c67a270f05a8d94ec3667c

700a0cc088a42a2ed92c6f961534fdb38588af87
drm/radeon/kms: Use radeon_agp_disable when disabling AGP
http://git.kernel.org/?p=linux/kernel/git/airlied/drm-2.6.git;a=commit;h=700a0cc088a42a2ed92c6f961534fdb38588af87

0a3f316370da07fcdb11fde4f5a683d60713b7fd
drm/radeon/kms: Disable AGP is aperture size < 32M
https://bugzilla.redhat.com/show_bug.cgi?id=539624
http://git.kernel.org/?p=linux/kernel/git/airlied/drm-2.6.git;a=commit;h=0a3f316370da07fcdb11fde4f5a683d60713b7fd

30d2d9a54d48e4fefede0389ded1b6fc2d44a522
drm/radeon/kms: Fix r600 blit cleanup path
http://git.kernel.org/?p=linux/kernel/git/airlied/drm-2.6.git;a=commit;h=30d2d9a54d48e4fefede0389ded1b6fc2d44a522

6398d42454ce1671b3422c34fd0f600c9c76c8b1
drm/radeon/kms: Do not unpin buffer in fb destruction
http://git.kernel.org/?p=linux/kernel/git/airlied/drm-2.6.git;a=commit;h=6398d42454ce1671b3422c34fd0f600c9c76c8b1

7a15cbd40108a670baae71cbd3cec62b65891fa6
drm/radeon/kms: fix displayport->dvi connector DDC.
http://git.kernel.org/?p=linux/kernel/git/airlied/drm-2.6.git;a=commit;h=7a15cbd40108a670baae71cbd3cec62b65891fa6

9270eb1b496cb002d75f49ef82c9ef4cbd22a5a0
drm/radeon/kms: only evict to GTT if CP is ready
http://bugs.freedesktop.org/show_bug.cgi?id=25733
http://bugzilla.kernel.org/show_bug.cgi?id=15035
http://git.kernel.org/?p=linux/kernel/git/airlied/drm-2.6.git;a=commit;h=9270eb1b496cb002d75f49ef82c9ef4cbd22a5a0

11f3b59e3654c66c4e8ef2c48f8138b78bf440da
drm/radeon/kms: Fix crash getting TV info with no BIOS.
http://git.kernel.org/?p=linux/kernel/git/airlied/drm-2.6.git;a=commit;h=11f3b59e3654c66c4e8ef2c48f8138b78bf440da

1b24203e51072b6e76aff8c74bdd67eb3b34a724
drm/radeon/kms/rv100: reject modes > 135 Mhz on DVI (v2)
http://bugs.freedesktop.org/show_bug.cgi?id=25992
http://git.kernel.org/?p=linux/kernel/git/airlied/drm-2.6.git;a=commit;h=1b24203e51072b6e76aff8c74bdd67eb3b34a724

b042589ca038e647fa1e2bb4e7ac3963688479b8
drm/radeon/kms/r6xx+: make irq handler less verbose
http://git.kernel.org/?p=linux/kernel/git/airlied/drm-2.6.git;a=commit;h=b042589ca038e647fa1e2bb4e7ac3963688479b8

3890ddf56dbc0f804953198e65a7e406ed654576
drm/radeon/kms: fix up LVDS handling on macs (v2)
http://git.kernel.org/?p=linux/kernel/git/airlied/drm-2.6.git;a=commit;h=3890ddf56dbc0f804953198e65a7e406ed654576

Signed-off-by: Aristeu Rozanski <arozansk@redhat.com>